Fix event card on small devices

--- a/news/static/news/css/article.css
+++ b/news/static/news/css/article.css
@@ -60,3 +60,10 @@ p {
         display: flex;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .normal.card {
+        float: none;
+        margin-left: 0;
+    }
+}
